Bug 251323 - Cannot delete appointments from maintenance view
Summary: Cannot delete appointments from maintenance view
Status: VERIFIED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: calendar (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: HI major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-15 14:16 UTC by Felix Wolfsteller
Modified: 2011-01-19 11:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-15 14:16:45 UTC
In Version 4:4.5~20100910.1175286-1maemo5.1174786 , pressing "delete" on an event in maintenance view does not has an effect. Deleting view "Actions" flap in detail view does not work reliably, either.
Comment 1 Felix Wolfsteller 2010-09-23 15:39:20 UTC
Works as expected in version 4:4.5~20100922.1178352-1maemo1.1177763 .
Comment 2 Ludwig Reiter 2010-12-02 15:33:47 UTC
version: 20101202-1202744-1maemo1

Cannot delete an event in the maintainer modus.
Comment 3 Tobias Koenig 2010-12-02 16:36:49 UTC
SVN commit 1202868 by tokoe:

Get the item to delete from the selection model
and not from the view.

This solves the "Can't delete events from maintenance screen" bug

BUG: 251323


 M  +6 -4      mainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202868