Get the item to delete from the selection model and not from the view.

This solves the "Can't delete events from maintenance screen" bug

BUG: 251323

svn path=/trunk/KDE/kdepim/mobile/; revision=1202868